added new heading to github

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
    <h2>my new images </h2>
     <img src="2.jpg" alt="">
     <img src="images.jpg" alt="">
+    <h3> my git hu b project </h3>
 </body>
 </html>
