--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
    <h2>my new images </h2>
     <img src="2.jpg" alt="">
     <img src="images.jpg" alt="">
-    <h3> my git hu b project </h3>
+    <h3> my github project </h3>
+    <form action=""></form>
+    <label for="">name</label>
+    <input type="text" name="" id=""><br>
+    <label for="">email</label>
+    <input type="email" name="" id=""><br>
+    <label for="">phone</label>
+    <input type="text" name="" id=""><br>
+    <label for="">message</label>
+    <textarea name="message" id="" cols="30" rows="10"></textarea>
 </body>
 </html>
